--- a/app/views/records/_main.html.erb
+++ b/app/views/records/_main.html.erb
@@ -7,20 +7,25 @@
   <%= link_to 'ログイン', new_user_session_path %>
 <% end %>
 
+<% if @record.day != nil %>
+  <%= @record1.day %>
+<% end %>
+
+  
 
 <div id="clock"></div>
 
 <%= form_with model: @record,local: true do |f| %>
-  <%= f.hidden_field :day, value:Date.today%>
-  <%= f.hidden_field :begin, id:"begin" %>
+  <%= f.text_field :day, id:"begin-day"%>
+  <%= f.text_field :begin, id:"begin" %>
   <%= f.submit "出勤" %>
 <% end %>
 
 <%= form_with model: @record,local: true do |f| %>
-  <label>休憩時間</label>
-  <%= f.text_field :break, value:0%>
-  <%= f.hidden_field :day,id:"day"%>
-  <%= f.hidden_field :finish, id:"finish" %>
-  <%= f.submit "退勤" ,data: {confirm: "登録"} %>
+  <%= f.text_field :day, id:"finish-day"%>
+  <%= f.text_field :finish, id:"finish" %><br />
+  <%= f.label :break, "休憩時間" %>
+  <%= f.text_field :break, value: 0 %>
+  <%= f.submit "退勤" %>
 <% end %>
 
