--- a/app/views/records/confirm.html.erb
+++ b/app/views/records/confirm.html.erb
@@ -4,31 +4,31 @@
   <%= form_with model: @record1, local: true do |f|%>
     <%= @record.user.name %>
     <dt>
-        <%= f.label :day, '日付' %>
-        <%= f.text_field :day %>
+        <%= f.label :day_time, '日付' %>
+        <%= f.text_field :day_time %>
     </dt>
     <dt>
-        <%= f.label :begin, '出勤時間' %>
-        <%if @record1.begin != nil %>
-          <%= f.text_field :begin, value: @record1.begin.strftime("%H:%M") %>
+        <%= f.label :begin_time, '出勤時間' %>
+        <%if @record1.begin_time != nil %>
+          <%= f.text_field :begin_time, value: @record1.begin_time.strftime("%H:%M") %>
         <% else %>
-          <%= f.text_field :begin %>
+          <%= f.text_field :begin_time %>
         <% end %>
     </dt>
     <dt>
-      <%= f.label :finish, '退勤時間' %>
-      <%if @record1.finish != nil %>
-        <%= f.text_field :finish, value: @record1.finish.strftime("%H:%M") %>
+      <%= f.label :finish_time, '退勤時間' %>
+      <%if @record1.finish_time != nil %>
+        <%= f.text_field :finish_time, value: @record1.finish_time.strftime("%H:%M") %>
         <% else %>
-            <%= f.text_field :finish %>
+            <%= f.text_field :finish_time %>
       <% end %>
     </dt>
     <dt>
-      <%= f.label :break, '休憩時間'%>
-      <%if @record1.break != nil %>
-        <%= f.text_field :break, value: @record1.break %>
+      <%= f.label :break_time, '休憩時間'%>
+      <%if @record1.break_time != nil %>
+        <%= f.text_field :break_time, value: @record1.break_time %>
          <% else %>
-            <%= f.text_field :break %>
+            <%= f.text_field :break_time %>
       <% end %>
     </dt>
   <% end %>
@@ -38,37 +38,37 @@
   <%= form_with model: @record, url: complete_records_path, local: true do |f|%>
     <%= @record.user.name %>
     <dt>
-        <%= f.label :day, '日付' %>
-        <%= f.text_field :day, value: @record.day %>
+        <%= f.label :day_time, '日付' %>
+        <%= f.text_field :day_time, value: @record.day_time %>
     </dt>
     <dt>
-        <%= f.label :begin, '出勤時間' %>
-        <%if @record.begin != nil %>
-          <%= f.text_field :begin, value: @record.begin.strftime("%H:%M") %>
-        <% elsif  @record1.begin != nil %>
-            <%= f.text_field :begin, value: @record1.begin.strftime("%H:%M") %>
+        <%= f.label :begin_time, '出勤時間' %>
+        <%if @record.begin_time != nil %>
+          <%= f.text_field :begin_time, value: @record.begin_time.strftime("%H:%M") %>
+        <% elsif  @record1.begin_time != nil %>
+            <%= f.text_field :begin_time, value: @record1.begin_time.strftime("%H:%M") %>
         <% else %>
-            <%= f.text_field :begin %>
+            <%= f.text_field :begin_time %>
       <% end %>
     </dt>
     <dt>
-        <%= f.label :finish, '退勤時間' %>
-        <%if @record.finish != nil %>
-            <%= f.text_field :finish, value: @record.finish.strftime("%H:%M") %>
-        <% elsif  @record1.finish != nil %>
-            <%= f.text_field :finish, value: @record1.finish.strftime("%H:%M") %>
+        <%= f.label :finish_time, '退勤時間' %>
+        <%if @record.finish_time != nil %>
+            <%= f.text_field :finish_time, value: @record.finish_time.strftime("%H:%M") %>
+        <% elsif  @record1.finish_time != nil %>
+            <%= f.text_field :finish_time, value: @record1.finish_time.strftime("%H:%M") %>
         <% else %>
-            <%= f.text_field :finish %>
+            <%= f.text_field :finish_time %>
       <% end %>
     </dt>
     <dt>
-      <%= f.label :break, '休憩時間'%>
-      <%if @record.break != nil %>
-        <%= f.text_field :break, value: @record.break%>
-      <% elsif  @record1.break != nil %>
-            <%= f.text_field :break, value:@record1.break  %>
+      <%= f.label :break_time, '休憩時間'%>
+      <%if @record.break_time != nil %>
+        <%= f.text_field :break_time, value: @record.break_time%>
+      <% elsif  @record1.break_time != nil %>
+            <%= f.text_field :break_time, value:@record1.break_time  %>
       <% else %>
-            <%= f.text_field :break %>
+            <%= f.text_field :break_time %>
       <% end %>
     </dt>
     <%= f.submit '更新' %>
@@ -76,8 +76,8 @@
 </dl>
 
 <%= form_for @record, method: :post, url: back_records_path do |form| %>
-	<%= form.hidden_field :day %>
-	<%= form.hidden_field :begin %>
-	<%= form.hidden_field :finish %>
+	<%= form.hidden_field :day_time %>
+	<%= form.hidden_field :begin_time %>
+	<%= form.hidden_field :finish_time %>
 	<%= form.submit '入力画面に戻る' %>
 <% end %>
