条件分岐の修正

--- a/app/views/records/_side_bar.html.erb
+++ b/app/views/records/_side_bar.html.erb
@@ -1,7 +1,8 @@
-<サイドバー>
 
 <% if user_signed_in? %>
-<%= link_to "マイページ",  record_path(current_user.id) %>
+<ul>
+  <li class="side-bar-list"> <%= link_to "出退勤記録",  record_path(current_user.id) ,class:"delete-line" %> </li>
+  <li class="side-bar-list"> <%= link_to "マイページ",  record_path(current_user.id) ,class:"delete-line" %> </li>
+</ul>
 <% else %>
-ログインしてください
 <% end %>
