--- a/app/views/records/confirm.html.erb
+++ b/app/views/records/confirm.html.erb
@@ -1,83 +1,99 @@
+<div class="wrapper">
+  <div class="side-bar">
+   <%= render "records/side_bar" %>
+  </div>
 
-
-<dl>
-  <%= form_with model: @record1, local: true do |f|%>
-    <%= @record.user.name %>
-    <dt>
-        <%= f.label :day_time, '日付' %>
-        <%= f.text_field :day_time %>
-    </dt>
-    <dt>
-        <%= f.label :begin_time, '出勤時間' %>
-        <%if @record1.begin_time != nil %>
-          <%= f.text_field :begin_time, value: @record1.begin_time.strftime("%H:%M") %>
-        <% else %>
-          <%= f.text_field :begin_time %>
+  
+  <div class="main">
+    <p>現在のデータ</p>
+    <table>
+      <th>名前</th>
+      <th>日付</th>
+      <th>出勤</th>
+      <th>退勤</th>
+      <th>休憩</th>
+      <tr>
+        <%= form_with model: @record1, local: true do |f|%>
+          <td> <%= @record.user.name %> </td>
+          <td> <%= @record.day_time %> </td>
+          <td> 
+            <%if @record1.nil? %>
+            <% elsif @record1.begin_time != nil %>
+              <%= @record1.begin_time.strftime("%H:%M") %>
+            <% end %>
+         </td>
+          <td> 
+            <%if @record1.nil? %> 
+            <% elsif @record1.finish_time != nil %>
+              <%= @record1.finish_time.strftime("%H:%M") %>
+            <% end %>
+          </td>
+          <td>
+            <%if @record1.nil? %> 
+            <% elsif @record1.break_time != nil %>
+              <%=@record1.break_time %>
+            <% end %>
+          </td>
         <% end %>
-    </dt>
-    <dt>
-      <%= f.label :finish_time, '退勤時間' %>
-      <%if @record1.finish_time != nil %>
-        <%= f.text_field :finish_time, value: @record1.finish_time.strftime("%H:%M") %>
-        <% else %>
+       </tr> 
+    </table>
+    
+    <p>編集データ</p>
+    <table>
+      <th>名前</th>
+      <th>日付</th>
+      <th>出勤</th>
+      <th>退勤</th>
+      <th>休憩</th>
+      <tr>  
+        <%= form_with model: @record, method: :post, url: complete_records_path, local: true do |f|%>
+          <td> <%= @record.user.name %> </td>
+          <td> <%= f.text_field :day_time, value: @record.day_time %> </td>
+          <td> 
+            <%if @record.begin_time != nil %>
+              <%= f.text_field :begin_time, value: @record.begin_time.strftime("%H:%M") %>
+            <%elsif @record1.nil? %>
+              <%= f.text_field :begin_time %>
+            <% elsif @record1.begin_time != nil %>
+              <%= f.text_field :begin_time, value: @record1.begin_time.strftime("%H:%M") %>
+            <% else %>
+              <%= f.text_field :begin_time %>
+            <% end %>
+          </td>
+          <td>
+            <% if @record.finish_time != nil %>
+              <%= f.text_field :finish_time, value: @record.finish_time.strftime("%H:%M") %>
+            <% elsif @record1.nil? %> 
+              <%= f.text_field :finish_time %>
+            <% elsif @record1.finish_time != nil %>
+              <%= f.text_field :finish_time, value: @record1.finish_time.strftime("%H:%M") %>
+            <% else %>
             <%= f.text_field :finish_time %>
-      <% end %>
-    </dt>
-    <dt>
-      <%= f.label :break_time, '休憩時間'%>
-      <%if @record1.break_time != nil %>
-        <%= f.text_field :break_time, value: @record1.break_time %>
-         <% else %>
-            <%= f.text_field :break_time %>
-      <% end %>
-    </dt>
-  <% end %>
-</dl>
+            <% end %>
+          </td>
+          <td>
+            <% if @record.break_time != nil %>
+              <%= f.text_field :break_time, value: @record.break_time%>
+            <% elsif @record1.nil? %> 
+              <%= f.text_field :break_time %>
+            <% elsif @record1.break_time != nil %>
+              <%= f.text_field :break_time, value: @record1.break_time %>
+             <% else %>
+              <%= f.text_field :break_time %>
+            <% end %>
+          </td>
+      </tr>
+    </table>
+    <div class="confirm-submit">
+          <%= f.submit '更新', class: "confirm-update-submit" %>
+        <% end %>
+          
 
-<dl>
-  <%= form_with model: @record, method: :post, url: complete_records_path, local: true do |f|%>
-    <%= @record.user.name %>
-    <dt>
-        <%= f.label :day_time, '日付' %>
-        <%= f.text_field :day_time, value: @record.day_time %>
-    </dt>
-    <dt>
-        <%= f.label :begin_time, '出勤時間' %>
-        <%if @record.begin_time != nil %>
-          <%= f.text_field :begin_time, value: @record.begin_time.strftime("%H:%M") %>
-        <% elsif  @record1.begin_time != nil %>
-            <%= f.text_field :begin_time, value: @record1.begin_time.strftime("%H:%M") %>
-        <% else %>
-            <%= f.text_field :begin_time %>
+      <%= form_for @record, method: :post, url: back_records_path do |form| %>
+        <%= form.hidden_field :day_time %>
+        <%= form.hidden_field :begin_time %>
+        <%= form.hidden_field :finish_time %>
+        <%= form.submit '入力画面に戻る', class: "confirm-back-submit" %>
       <% end %>
-    </dt>
-    <dt>
-        <%= f.label :finish_time, '退勤時間' %>
-        <%if @record.finish_time != nil %>
-            <%= f.text_field :finish_time, value: @record.finish_time.strftime("%H:%M") %>
-        <% elsif  @record1.finish_time != nil %>
-            <%= f.text_field :finish_time, value: @record1.finish_time.strftime("%H:%M") %>
-        <% else %>
-            <%= f.text_field :finish_time %>
-      <% end %>
-    </dt>
-    <dt>
-      <%= f.label :break_time, '休憩時間'%>
-      <%if @record.break_time != nil %>
-        <%= f.text_field :break_time, value: @record.break_time%>
-      <% elsif  @record1.break_time != nil %>
-            <%= f.text_field :break_time, value:@record1.break_time  %>
-      <% else %>
-            <%= f.text_field :break_time %>
-      <% end %>
-    </dt>
-    <%= f.submit '更新' %>
-  <% end %>
-</dl>
-
-<%= form_for @record, method: :post, url: back_records_path do |form| %>
-	<%= form.hidden_field :day_time %>
-	<%= form.hidden_field :begin_time %>
-	<%= form.hidden_field :finish_time %>
-	<%= form.submit '入力画面に戻る' %>
-<% end %>
+    </div>
+  </div>
