--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -1,37 +1,46 @@
-
-
-<dl>
-  <%= form_with model: @record, local: true do |f|%>
-    <%= @record.user.name %>
-    <dt>
-        <%= f.label :day_time, '日付' %>
-        <%= f.text_field :day_time, value: @record.day_time %>
-    </dt>
-    <dt>
-        <%= f.label :begin_time, '出勤時間' %>
-        <%if @record.begin_time != nil %>
-          <%= f.text_field :begin_time, value: @record.begin_time.strftime("%H:%M")%>
-        <% else %>
-          <%= f.text_field :begin_time %>
-        <% end %>
-    </dt>
-    <dt>
-      <%= f.label :finish_time, '退勤時間' %>
-      <%if @record.finish_time != nil %>
-        <%= f.text_field :finish_time, value: @record.finish_time.strftime("%H:%M") %>
-        <% else %>
-            <%= f.text_field :finish_time %>
-      <% end %>
-    </dt>
-    <dt>
-      <%= f.label :break_time, '休憩時間'%>
-      <%if @record.break_time != nil %>
-        <%= f.text_field :break_time, value: @record.break_time %>
-         <% else %>
-            <%= f.text_field :break_time %>
-      <% end %>
-    </dt>
-    <%= f.submit '変更'%>
+<div class="wrapper">
+  <div class="side-bar">
+   <%= render "records/side_bar" %>
+  </div>
+  <div class="main">
+   <p>編集データ</p>
+        <%= form_with model: @record, local: true do |f|%>
+         <table>
+            <th>名前</th>
+            <th>日付</th>
+            <th>出勤</th>
+            <th>退勤</th>
+            <th>休憩</th>
+            <tr>  
+          <td> <%= @record.user.name %> </td>
+          <td> <%= f.text_field :day_time, value: @record.day_time %> </td>
+          <td> 
+            <%if @record.begin_time != nil %>
+              <%= f.text_field :begin_time, value: @record.begin_time.strftime("%H:%M") %>
+            <% elsif%>
+              <%= f.text_field :begin_time %>
+            <% end %>
+          </td>
+          <td>
+            <%if @record.finish_time != nil %>
+              <%= f.text_field :finish_time, value: @record.finish_time.strftime("%H:%M") %>
+            <% elsif%>
+              <%= f.text_field :finish_time %>
+            <% end %>
+          </td>
+          <td>
+            <%if @record.break_time != nil %>
+              <%= f.text_field :break_time, value: @record.break_time%>
+            <% elsif%>
+              <%= f.text_field :break_time %>
+            <% end %>
+          </td>
+        </tr>
+    </table>
+    <div class="edit-submit">
+      <%= f.submit '更新', class: "edit-update-submit" %>
   <% end %>
-</dl>
+      <%= button_to '戻る', record_path(current_user.id), method: :get, class: "edit-back-submit" %>    
+   </div>
+</div>
 
