--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -69,7 +69,7 @@
         <%= link_to "編集", edit_record_path(record.id)%>
       </td>
       <td>
-        <%= link_to "削除", record_path(record.id), method: :delete%>
+        <%= link_to "削除", record_path(record.id), method: :delete, data: {confirm: "削除しますか？"}%>
       </td>
    </tr>
   <% end %>
